--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
 				<h1>Kashuba Artur</h1>
 				<div class="tag">Unity Developer</div>
 				<br>
+				<div class="social-list">
+					<a href="https://github.com/Rockstrip" target="_blank" style="text-decoration: none;" style="text-decoration: none;">
+						<img class="social" src="Resources\Icons\Social\github.svg" alt="GitHub">
+					</a>
+					<a href="https://www.upwork.com/freelancers/~01c91a5d470285de31" target="_blank" style="text-decoration: none;">
+						<img class="social" src="Resources\Icons\Social\upwork.svg" alt="UpWork">
+					</a>
+					<a href="https://t.me/rockstrip" target="_blank" style="text-decoration: none;">
+						<img class="social" src="Resources\Icons\Social\telegram.svg" alt="Telegram">
+					</a>
+					<a href="https://www.linkedin.com/in/artur-kashuba-556b00192" target="_blank" style="text-decoration: none;">
+						<img class="social" src="Resources\Icons\Social\linkedin.svg" alt="LinkedIn">
+					</a>
+					<a href="https://join.skype.com/invite/EgwpqlDLFxxX" target="_blank" style="text-decoration: none;">
+						<img class="social" src="Resources\Icons\Social\skype.svg" alt="Skype">
+					</a>
+				</div>
 				<hr>
 				<div class="person-info-list">
 					<div class="person-info">
@@ -29,22 +46,33 @@
 					<div class="person-info">
 						<div class="bulb shadow"> <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/69/How_to_use_icon.svg"> </div>
 						<div style="margin-left: 5px;">
-							<h5>Email</h5>
-							<p>artes5kgc@gmail.com</p>
+							<h5>Birthday</h5>
+							<p>14 September 2000</p>
 						</div>
 					</div>
 					<div class="person-info">
 						<div class="bulb shadow"> <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/69/How_to_use_icon.svg"> </div>
 						<div style="margin-left: 5px;">
-							<h5>Email</h5>
-							<p>artes5kgc@gmail.com</p>
+							<h5>Languages</h5>
+							<p>English, Ukrainian</p>
 						</div>
 					</div>
 					<div class="person-info">
 						<div class="bulb shadow"> <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/69/How_to_use_icon.svg"> </div>
 						<div style="margin-left: 5px;">
-							<h5>Email</h5>
-							<p>artes5kgc@gmail.com</p>
+							<h5>Location</h5>
+							<p>Ukraine</p>
+						</div>
+					</div>
+					<div class="person-info">
+						<div class="bulb shadow"> <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/69/How_to_use_icon.svg"> </div>
+						<div style="margin-left: 5px;">
+							<h5>Education</h5>
+							<p> 
+								Bachelor of Applied Science <br>
+								(BASc), Computer science    <br>
+								2017-2021
+							</p>
 						</div>
 					</div>
 				</div>
