--- a/project.html
+++ b/project.html
@@ -8,15 +8,13 @@
     <script src="js/project.js" defer></script>
 </head>
 <body>
-    <section id="name">
-        <h1 class="main-title">Artur Kashuba<br> <span class="subtitle">Unity Developer</span></h1>
-    </section>
-
-    <nav>
-        <a href = "about.html"><button><h1>About Me</h1></button></a>
-        <a href = "portfolio.html"><button><h1>Portfolio</h1></button></a>
-        <a href = "contact.html"><button><h1>Contact</h1></button></a>
-    </nav>
+    <header>  
+        <nav>
+          <a href="about.html"><button><h1>About Me</h1></button></a>
+          <a href="portfolio.html"><button class="active"><h1>Portfolio</h1></button></a>
+          <a href="contact.html"><button><h1>Contact</h1></button></a>
+        </nav>
+      </header>
     <main>
         <section class="top-section">
             <div class="carousel-container">
