--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/c-sharp.svg" alt="C# Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/c-sharp.png" alt="C# Icon" class="skill-icon">
             <div class="skill-details">
               <h3>C#</h3>
               <p>6 years experience</p>
@@ -46,14 +46,14 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/mobile.svg" alt="Mobile Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/mobile.png" alt="Mobile Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Mobile</h3>
               <p>Android and iOS</p>
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/multiplayer.svg" alt="Multiplayer Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/multiplayer.png" alt="Multiplayer Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Multiplayer</h3>
               <p>Photon or custom solution</p>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/monetization.svg" alt="Monetization Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/monetization.png" alt="Monetization Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Monetization</h3>
               <p>Google AdMob and Unity Ads</p>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/optimization.svg" alt="Optimization Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/optimization.png" alt="Optimization Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Optimization</h3>
               <p>Profile Analysis, batching</p>
