--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/vr.svg" alt="VR Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/vr.png" alt="VR Icon" class="skill-icon">
             <div class="skill-details">
               <h3>AR/VR</h3>
               <p>Oculus, SteamVR, HTC Vive</p>
@@ -67,14 +67,14 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/shader.svg" alt="Shader Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/shader.png" alt="Shader Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Shadering</h3>
               <p>HLSL or Shader graphs</p>
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/editor.svg" alt="Unity Editor Scripting Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/editor.png" alt="Unity Editor Scripting Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Editor Scripting</h3>
               <p>Custom engine tools</p>
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/analytics.svg" alt="Analytics Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/analytics.png" alt="Analytics Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Analytics</h3>
               <p>Firebase, Amplitude, UGS</p>
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/git.svg" alt="Git Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/git.png" alt="Git Icon" class="skill-icon">
             <div class="skill-details">
               <h3>Git</h3>
               <p>branch, pull request</p>
