--- a/portfolio.html
+++ b/portfolio.html
@@ -18,14 +18,14 @@
         <div class="portfolio-grid">
             <div class="project">
               <a href="project.html?name=Samurai%20Warlords">
-                <img src="Resources/Portfolio/Samurai Warlords/logo.png" alt="Samurai Warlords">
+                <img src="Resources/Portfolio/Samurai Warlords/logo.jpg" alt="Samurai Warlords">
                     <h3>Samurai Warlords</h3>
                     <p>Tags: Unity3D, C#, Multiplayer</p>
                 </a>
             </div>
             <div class="project">
                 <a href="Samurai%20Swords%20Store.html">
-                    <img src="Resources/Portfolio/Samurai Swords Store/logo.png" alt="Samurai Swords Store">
+                    <img src="Resources/Portfolio/Samurai Swords Store/logo.jpg" alt="Samurai Swords Store">
                     <h3>Samurai Swords Store</h3>
                     <p>Tags: Unity3D, C#, API</p>
                 </a>
@@ -81,7 +81,7 @@
             </div>
             <div class="project">
                 <a href="Klee%20Run.html">
-                    <img src="Resources/Portfolio/Klee Run/klee-logo.jpg" alt="Klee Run">
+                    <img src="Resources/Portfolio/Klee Run/logo.jpg" alt="Klee Run">
                     <h3>Klee Run</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
