--- a/portfolio.html
+++ b/portfolio.html
@@ -24,98 +24,98 @@
                 </a>
             </div>
             <div class="project">
-                <a href="Samurai%20Swords%20Store.html">
+                <a href="project.html?name=Samurai%20Swords%20Store.html">
                     <img src="Resources/Portfolio/Samurai Swords Store/logo.jpg" alt="Samurai Swords Store">
                     <h3>Samurai Swords Store</h3>
                     <p>Tags: Unity3D, C#, API</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Haunted%20Houses.html">
+                <a href="project.html?name=Haunted%20Houses.html">
                     <img src="Resources/Portfolio/Haunted Houses/logo.webp" alt="Haunted Houses">
                     <h3>Haunted Houses</h3>
                     <p>Tags: Unity3D, C#, API, UI, Enemy AI, environment generating</p>
                 </a>
             </div>
             <div class="project">
-                <a href="RudderStack.html">
+                <a href="project.html?name=RudderStack.html">
                     <img src="Resources/Portfolio/RudderStack/logo.webp" alt="RudderStack">
                     <h3>RudderStack</h3>
                     <p>Tags: Unity3D, C#, API, SDK</p>
                 </a>
             </div>
             <div class="project">
-                <a href="NFTicket.html">
+                <a href="project.html?name=NFTicket.html">
                     <img src="Resources/Portfolio/NFTicket/logo.jpg" alt="NFTicket">
                     <h3>NFTicket</h3>
                     <p>Tags: Unity3D, C#, API, UI, QR scan, NFT</p>
                 </a>
             </div>
             <div class="project">
-                <a href="iBall.html">
+                <a href="project.html?name=iBall.html">
                     <img src="Resources/Portfolio/iBall/logo.jpg" alt="iBall">
                     <h3>iBall</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Jiggler.html">
+                <a href="project.html?name=Jiggler.html">
                     <img src="Resources/Portfolio/Jiggler/logo.jpg" alt="Jiggler">
                     <h3>Jiggler</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Heroes%20Auto%20Battle.html">
+                <a href="project.html?name=Heroes%20Auto%20Battle.html">
                     <img src="Resources/Portfolio/Heroes Auto Battle/logo.png" alt="Heroes Auto Battle">
                     <h3>Heroes Auto Battle</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Beaver%20Lumberjack.html">
+                <a href="project.html?name=Beaver%20Lumberjack.html">
                     <img src="Resources/Portfolio/Beaver Lumberjack/logo.jpg" alt="Beaver Lumberjack">
                     <h3>Beaver Lumberjack</h3>
                     <p>Tags: Unity3D, C#, UI, VFX</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Klee%20Run.html">
+                <a href="project.html?name=Klee%20Run.html">
                     <img src="Resources/Portfolio/Klee Run/logo.jpg" alt="Klee Run">
                     <h3>Klee Run</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Magic%20Swamp.html">
+                <a href="project.html?name=Magic%20Swamp.html">
                     <img src="Resources/Portfolio/Magic Swamp/logo.webp" alt="Magic Swamp">
                     <h3>Magic Swamp</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Shio.html">
+                <a href="project.html?name=Shio.html">
                     <img src="Resources/Portfolio/Shio/logo.webp" alt="Shio">
                     <h3>Shio</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Flappy%20Center.html">
+                <a href="project.html?name=Flappy%20Center.html">
                     <img src="Resources/Portfolio/Flappy Center/logo.jpg" alt="Flappy Center">
                     <h3>Flappy Center</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="DeltaP3.html">
+                <a href="project.html?name=DeltaP3.html">
                     <img src="Resources/Portfolio/DeltaP3/logo.jpg" alt="DeltaP3">
                     <h3>DeltaP3</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
                 </a>
             </div>
             <div class="project">
-                <a href="Honey%20Cut.html">
+                <a href="project.html?name=Honey%20Cut.html">
                     <img src="Resources/Portfolio/Honey Cut/logo.jpg" alt="Honey Cut">
                     <h3>Honey Cut</h3>
                     <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
