--- a/portfolio.html
+++ b/portfolio.html
@@ -7,150 +7,47 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>  
+    <header>
         <nav>
-          <a href="about.html"><button><h1>About Me</h1></button></a>
-          <a href="portfolio.html"><button class="active"><h1>Portfolio</h1></button></a>
-          <a href="contact.html"><button><h1>Contact</h1></button></a>
+            <a href="about.html"><button><h1>About Me</h1></button></a>
+            <a href="portfolio.html"><button class="active"><h1>Portfolio</h1></button></a>
+            <a href="contact.html"><button><h1>Contact</h1></button></a>
         </nav>
-      </header>
+    </header>
     <main>
-        <div class="portfolio-grid">
-            <div class="project">
-              <a href="project.html?name=Samurai%20Warlords">
-                <img src="Resources/Portfolio/Samurai Warlords/logo.jpg" alt="Samurai Warlords">
-                    <h3>Samurai Warlords</h3>
-                    <p>Tags: Unity3D, C#, Multiplayer</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Samurai%20Swords%20Store.html">
-                    <img src="Resources/Portfolio/Samurai Swords Store/logo.jpg" alt="Samurai Swords Store">
-                    <h3>Samurai Swords Store</h3>
-                    <p>Tags: Unity3D, C#, API</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Haunted%20Houses.html">
-                    <img src="Resources/Portfolio/Haunted Houses/logo.webp" alt="Haunted Houses">
-                    <h3>Haunted Houses</h3>
-                    <p>Tags: Unity3D, C#, API, UI, Enemy AI, environment generating</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=RudderStack.html">
-                    <img src="Resources/Portfolio/RudderStack/logo.webp" alt="RudderStack">
-                    <h3>RudderStack</h3>
-                    <p>Tags: Unity3D, C#, API, SDK</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=NFTicket.html">
-                    <img src="Resources/Portfolio/NFTicket/logo.jpg" alt="NFTicket">
-                    <h3>NFTicket</h3>
-                    <p>Tags: Unity3D, C#, API, UI, QR scan, NFT</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=iBall.html">
-                    <img src="Resources/Portfolio/iBall/logo.jpg" alt="iBall">
-                    <h3>iBall</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Jiggler.html">
-                    <img src="Resources/Portfolio/Jiggler/logo.jpg" alt="Jiggler">
-                    <h3>Jiggler</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Heroes%20Auto%20Battle.html">
-                    <img src="Resources/Portfolio/Heroes Auto Battle/logo.png" alt="Heroes Auto Battle">
-                    <h3>Heroes Auto Battle</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Beaver%20Lumberjack.html">
-                    <img src="Resources/Portfolio/Beaver Lumberjack/logo.jpg" alt="Beaver Lumberjack">
-                    <h3>Beaver Lumberjack</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Klee%20Run.html">
-                    <img src="Resources/Portfolio/Klee Run/logo.jpg" alt="Klee Run">
-                    <h3>Klee Run</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Magic%20Swamp.html">
-                    <img src="Resources/Portfolio/Magic Swamp/logo.webp" alt="Magic Swamp">
-                    <h3>Magic Swamp</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Shio.html">
-                    <img src="Resources/Portfolio/Shio/logo.webp" alt="Shio">
-                    <h3>Shio</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Flappy%20Center.html">
-                    <img src="Resources/Portfolio/Flappy Center/logo.jpg" alt="Flappy Center">
-                    <h3>Flappy Center</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=DeltaP3.html">
-                    <img src="Resources/Portfolio/DeltaP3/logo.jpg" alt="DeltaP3">
-                    <h3>DeltaP3</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
-            <div class="project">
-                <a href="project.html?name=Honey%20Cut.html">
-                    <img src="Resources/Portfolio/Honey Cut/logo.jpg" alt="Honey Cut">
-                    <h3>Honey Cut</h3>
-                    <p>Tags: Unity3D, C#, UI, VFX, IAP</p>
-                </a>
-            </div>
+        <div class="portfolio-grid" id="portfolio-grid">
+            <!-- Здесь будет динамически добавлен контент -->
         </div>
     </main>
-</body>
-<footer>
-    <div class="footer-content">
-        <div class="footer-logo">
-            <h2>Artur Kashuba</h2>
-            <p>Unity Developer</p>
-        </div>
-        <div class="footer-links">
-            <h3>Quick Links</h3>
-            <ul>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <div class="footer-contact">
-            <h3>Contact Me</h3>
-            <p>Email: <a href="mailto:artur.kashuba@example.com">artur.kashuba@example.com</a></p>
-            <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-            <div class="social-links">
-                <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
-                <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
-                <a href="https://twitter.com/arturkashuba" target="_blank">Twitter</a>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <h2>Artur Kashuba</h2>
+                <p>Unity Developer</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact Me</h3>
+                <p>Email: <a href="mailto:artur.kashuba@example.com">artur.kashuba@example.com</a></p>
+                <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                <div class="social-links">
+                    <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
+                    <a href="https://twitter.com/arturkashuba" target="_blank">Twitter</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2025 Artur Kashuba. All rights reserved.</p>
-    </div>
-  </footer>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Artur Kashuba. All rights reserved.</p>
+        </div>
+    </footer>
+    <script src="js/portfolio.js"></script>
+</body>
 </html>
