--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <header>  
     <nav>
       <a href="about.html"><button class="active"><h1>About Me</h1></button></a>
@@ -15,13 +16,15 @@
     </nav>
   </header>
   
-
     <main>
       <h1 class="main-title">Artur Kashuba<br> <span class="subtitle">Unity Developer</span></h1>
         <h2 style = "margin-top: 0px;">Summary</h2>
-        <p>I am a Unity developer with over 4 years of experience in the industry. I have published 15+ games and achieved 100K+ downloads on Play Market. 
-          Skilled in effective client communication, team management, and cross-functional collaboration, ensuring smooth project delivery from concept to launch. </p>
-          
+        <p>
+          Unity Developer with 4+ years of experience. I have delivered 15+ published games and achieved 100K+ downloads in Play Market. 
+          Expertise in scalable architecture, multiplayer systems, and team management. 
+          Proficient in end-to-end development, from prototyping to launch, across PC, mobile, and VR platforms. 
+        </p>
+
         <h2>Skills</h2>
         <div class="skills-container">
           <div class="skill-card">
@@ -39,10 +42,10 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/vr.png" alt="VR Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/c-plus.png" alt="C++ Icon" class="skill-icon">
             <div class="skill-details">
-              <h3>AR/VR</h3>
-              <p>Oculus, SteamVR, HTC Vive</p>
+              <h3>C/C++</h3>
+              <p>4 years experience</p>
             </div>
           </div>
           <div class="skill-card">
@@ -60,17 +63,17 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/vfx.png" alt="VFX Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/vr.png" alt="VR Icon" class="skill-icon">
             <div class="skill-details">
-              <h3>VFX</h3>
-              <p>Particle System, Light Baking, Post-processing</p>
+              <h3>AR/VR</h3>
+              <p>Oculus, SteamVR, HTC Vive</p>
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/shader.png" alt="Shader Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/analytics.png" alt="Analytics Icon" class="skill-icon">
             <div class="skill-details">
-              <h3>Shadering</h3>
-              <p>HLSL or Shader graphs</p>
+              <h3>Analytics</h3>
+              <p>Firebase, Amplitude, UGS</p>
             </div>
           </div>
           <div class="skill-card">
@@ -88,10 +91,10 @@
             </div>
           </div>
           <div class="skill-card">
-            <img src="Resources/Icons/Skills/analytics.png" alt="Analytics Icon" class="skill-icon">
+            <img src="Resources/Icons/Skills/vfx.png" alt="VFX Icon" class="skill-icon">
             <div class="skill-details">
-              <h3>Analytics</h3>
-              <p>Firebase, Amplitude, UGS</p>
+              <h3>VFX</h3>
+              <p>Particles, Light Baking, Post-processing, Shadering</p>
             </div>
           </div>
           <div class="skill-card">
@@ -142,7 +145,7 @@
       <div class="timeline-right">
         <h3>Unity Developer</h3>
         <ul>
-          <li>Developed and maintained interactive games and apps using Unity3D and C#.</li>
+          <li>Developed and maintained interactive games and apps</li>
           <li>Implemented user interfaces and visual effects.</li>
           <li>Developed: FPV shooter with procedural dungeon generator (<a href="project.html?name=Haunted%20Houses">Haunted Houses</a>), P2E Runner (<a href="project.html?name=Klee%20Run">Klee Run</a>), low-poly mobile game (<a href="project.html?name=Magic%20Swamp">Magic Swamp</a>), PvP turn-based mobile game (<a href="project.html?name=iBall">iBall</a>), SDK for collecting Analytics Data without data loss (<a href="project.html?name=RudderStack">RudderStack</a>).</li>
         </ul>
@@ -175,22 +178,18 @@
         <div class="education"> 
           <h3>Software Engineering (Master) </h3>
           <p>Taras Shevchenko National University of Kyiv</p>
-          <p>09/2021 - 01/2023</p>
+          <p>2021 - 2023</p>
         </div>
         <div class="education"> 
           <h3>Software Engineering (Bachelor) </h3>
           <p>Taras Shevchenko National University of Kyiv</p>
-          <p>09/2017 - 05/2021</p>
+          <p>2017 - 2021</p>
         </div>
     </main>
 </body>
 
 <footer>
   <div class="footer-content">
-      <div class="footer-logo">
-          <h2>Artur Kashuba</h2>
-          <p>Unity Developer</p>
-      </div>
       <div class="footer-links">
           <h3>Quick Links</h3>
           <ul>
@@ -200,15 +199,15 @@
           </ul>
       </div>
       <div class="footer-contact">
-          <h3>Contact Me</h3>
-          <p>Email: <a href="mailto:artur.kashuba@example.com">artur.kashuba@example.com</a></p>
-          <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-          <div class="social-links">
-              <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
-              <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
-              <a href="https://twitter.com/arturkashuba" target="_blank">Twitter</a>
-          </div>
-      </div>
+        <h3>Contact Me</h3>
+        <p>Email: <a href="mailto:artes5kgc@gmail.com">artes5kgc@gmail.com</a></p>
+        <p>Phone: <a href="tel:+17819647620">+1 (781) 964-7620</a></p>
+        <div class="social-links">
+            <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
+            <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
+            <a href="https://www.upwork.com/freelancers/arturk98" target="_blank">Upwork</a>
+        </div>
+    </div>
   </div>
   <div class="footer-bottom">
       <p>&copy; 2025 Artur Kashuba. All rights reserved.</p>
