--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artur's Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/portfolio.js"></script>
 </head>
 <body>
     <header>
@@ -21,10 +22,6 @@
     </main>
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">
-                <h2>Artur Kashuba</h2>
-                <p>Unity Developer</p>
-            </div>
             <div class="footer-links">
                 <h3>Quick Links</h3>
                 <ul>
@@ -35,19 +32,18 @@
             </div>
             <div class="footer-contact">
                 <h3>Contact Me</h3>
-                <p>Email: <a href="mailto:artur.kashuba@example.com">artur.kashuba@example.com</a></p>
-                <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+                <p>Email: <a href="mailto:artes5kgc@gmail.com">artes5kgc@gmail.com</a></p>
+                <p>Phone: <a href="tel:+17819647620">+1 (781) 964-7620</a></p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
                     <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
-                    <a href="https://twitter.com/arturkashuba" target="_blank">Twitter</a>
+                    <a href="https://www.upwork.com/freelancers/arturk98" target="_blank">Upwork</a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2025 Artur Kashuba. All rights reserved.</p>
         </div>
-    </footer>
-    <script src="js/portfolio.js"></script>
+      </footer>
 </body>
 </html>
