--- a/Project Details.html
+++ b/Project Details.html
@@ -15,36 +15,31 @@
   </nav>
 </header>
 <main>
-  <section class="top-section">
-      <div class="carousel-container" bis_skin_checked="1">
-          <button class="carousel-btn prev-btn">❮</button>
-          <div class="carousel" style="transform: translateX(0px);" bis_skin_checked="1">
-              <!-- Images dynamically inserted here -->
-            <img src="Resources/Portfolio/Magic Swamp/1.webp" alt="Screenshot 1">
-            <img src="Resources/Portfolio/Magic Swamp/2.webp" alt="Screenshot 1">
-            <img src="Resources/Portfolio/Magic Swamp/3.webp" alt="Screenshot 1">
-            <img src="Resources/Portfolio/Magic Swamp/4.webp" alt="Screenshot 1">
+    <section class="top-section">
+        <div class="carousel-container" bis_skin_checked="1">
+            <button class="carousel-btn prev-btn">❮</button>
+            <div class="carousel" style="transform: translateX(0px);" bis_skin_checked="1">
+                <!-- Images dynamically inserted here -->
+            <img src="Resources/Portfolio/Haunted Houses/1.webp" alt="Screenshot 1"><img src="Resources/Portfolio/Haunted Houses/2.webp" alt="Screenshot 2"><img src="Resources/Portfolio/Haunted Houses/3.webp" alt="Screenshot 3"><img src="Resources/Portfolio/Haunted Houses/4.webp" alt="Screenshot 4"></div>
+            <button class="carousel-btn next-btn">❯</button>
+            <div class="thumbnails" bis_skin_checked="1">
+                <!-- Thumbnails dynamically inserted here -->
+            <img src="Resources/Portfolio/Haunted Houses/1.webp" alt="Thumbnail 1" class="active"><img src="Resources/Portfolio/Haunted Houses/2.webp" alt="Thumbnail 2"><img src="Resources/Portfolio/Haunted Houses/3.webp" alt="Thumbnail 3"><img src="Resources/Portfolio/Haunted Houses/4.webp" alt="Thumbnail 4"></div>
         </div>
-          <button class="carousel-btn next-btn">❯</button>
-          <div class="thumbnails" bis_skin_checked="1">
-              <!-- Thumbnails dynamically inserted here -->
-          <img src="Resources/Portfolio/Magic Swamp/4.webp" alt="Thumbnail 1" class="active"><img src="Resources/Portfolio/Magic Swamp/4.webp" alt="Thumbnail 2" class=""><img src="Resources/Portfolio/Magic Swamp/4.webp" alt="Thumbnail 3"><img src="Resources/Portfolio/Magic Swamp/4.webp" alt="Thumbnail 4"></div>
-      </div>
-      <aside class="project-info">
-          <img class="poster" src="./Project Details_files/logo.jpg" alt="Project Poster">
-          <div class="short-description" bis_skin_checked="1">
-              <p>Classic 3D chess game, with the feature: players can use katana, which was created in the SSS app.</p>
-              <p><strong>Release Date:</strong> 2024</p>
-              <p><strong>Developer:</strong> Artur Kashuba</p>
-              <p><strong>Publisher:</strong> Samurai Warlords</p>
-              <p>Unity3D, C#, Multiplayer</p>
-          </div>
-      </aside>
-  </section>
-  <section class="details-section">
-      <h2>About Project</h2>
-      <p class="detailed-description">3D chess game with integration of katana created in the Samurai Swords Store app.</p>
-  </section>
+        <aside class="project-info">
+            <img class="poster" src="Resources/Portfolio/Haunted Houses/logo.webp" alt="Project Poster">
+            <div class="short-description" bis_skin_checked="1">
+                <p>Shooter with dungeon generation, unique to each match. Developed for Lumighost Ltd.</p>
+                <div class="tags-container" bis_skin_checked="1">
+                    <span class="tag">Unity3D</span><span class="tag">C#</span><span class="tag">API</span><span class="tag">UI</span><span class="tag">Enemy AI</span> <span class="tag">Unity3D</span><span class="tag">C#</span><span class="tag">API</span>
+                </div>
+            </div>
+        </aside>
+    </section>
+    <section class="details-section">
+        <h2>About Project</h2>
+        <p class="detailed-description">Implemented gameplay systems, AI behaviors, and custom shaders.</p>
+    </section>
 </main>
 <footer>
   <div class="footer-content">
